# embedded-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  arm_32-zero.json  linker.ld  rustfmt.toml
.cargo/: config.toml
firmware/: config.txt
hello-world/src/: main.rs
morse-coder/: Cargo.toml
morse-coder/src/: main.rs
