[package]
name = "embedded-rust"
version = "0.1.0"
authors = ["Shaun Hamilton <shauhami020@gmail.com>"]
edition = "2021"
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "morse-coder"
path = "./morse-coder/src/main.rs"

[[bin]]
name = "hello-world"
path = "./hello-world/src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = ["hello-world"]

[dependencies]
