[package]
name = "morse-coder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "x86_64-unknown-linux-gnu"

[dependencies]
rust_gpiozero = "0.2.1"
tokio = { version = "1.19.2", features = ["rt", "time", "macros"] }
